[tool.poetry]
name = "digitalimageprocessing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.23.3"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.3"
matplotlib = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
